--- a/force-app/main/default/classes/TrabajoAgenteHelper.cls
+++ b/force-app/main/default/classes/TrabajoAgenteHelper.cls
@@ -45,5 +45,6 @@ public class TrabajoAgenteHelper {
             }
         }
         update listCasosActualizar;
+        CaseTriggerHelper.borrarChatter(JSON.serialize(recordIds));
     }
 }
