Agrego validación borrador

--- a/force-app/main/default/classes/FeedCommentTriggerHandler.cls
+++ b/force-app/main/default/classes/FeedCommentTriggerHandler.cls
@@ -3,4 +3,7 @@ public class FeedCommentTriggerHandler {
     public static void afterInsert(List<FeedComment> newFeedCommentList){
         FeedCommentTriggerHelper.validacionComentario(newFeedCommentList);
     }
+    public static void beforeDelete(List<FeedComment> newFeedCommentList){
+        FeedCommentTriggerHelper.validacionBorrado(newFeedCommentList);
+    }
 }
